<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/txtNomeHospede"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNomeRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/txtNomeHospedeR"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNome"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/txtCPF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtCPFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintBottom_toBottomOf="@+id/txtCPF"
        android:layout_constraintEnd_toEndOf="parent"
        android:layout_constraintTop_toTopOf="@+id/txtCPF"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/txtCPFHospede"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCPF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCPF" />

    <TextView
        android:id="@+id/txtValorNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintTop_toBottomOf="@+id/txtCPF"
        android:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/txtValorNota"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCPF" />

    <TextView
        android:id="@+id/txtValorNotaR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/txtValorNotaR"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtValorNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtValorNota" />

    <TextView
        android:id="@+id/txtCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintTop_toBottomOf="@+id/txtCPF"
        android:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:text="@string/txtNotaID"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorNota" />

    <TextView
        android:id="@+id/txtCodR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:text="@string/txtNotaIDR"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCod" />
</android.support.constraint.ConstraintLayout>
